Fix poor alignment in nav-bar. #745

--- a/srophe-app/resources/css/main.css
+++ b/srophe-app/resources/css/main.css
@@ -153,6 +153,7 @@ body {font-family: arial, sans-serif; background-color:#385978;}
 .icon-container {display:inline-block; line-height:1.5em;}
 .icon-nav {font-size:1.75em; display:inline-block; margin-right:.15em;}
 .icon-text {display:inline-block; margin-top:-.85em; vertical-align: middle;}
+.nav-text {display:inline-block; line-height:1.5em; margin-top:.25em;}
 
 .banner-container {display:inline-block; line-height:2.5em;}
 .banner-icon {font-size:2.5em; display:inline-block; margin-right:.15em;}
